--- a/Hotel/HotelManage.html
+++ b/Hotel/HotelManage.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <link rel="stylesheet" href="HotelManage.css">
     <title>Hotel manage Form</title>
@@ -56,7 +58,7 @@
     <div class="dataForm">
         <span class="icon"><i class="fa fa-male" aria-hidden="true"></i></span>
         <span class="title">Hotel&nbsp;&nbsp;&nbsp;</span>
-        <span class="guideId">H001</span>
+        <input type="text" name="id" id="HotelId" placeholder="HotelId">
         <br><br>
         <div class="row">
             <div class="form-group col-md-6 mb-3">
@@ -66,76 +68,78 @@
 
             <div class="form-group col-md-6 mb-3">
                 <label>Hotel Category</label>
-                <input type="text" name="address" class="form-control" id="Category" placeholder="Enter Address">
+                <input type="text" name="category" class="form-control" id="category" placeholder="Enter Hotel Category">
             </div>
 
             <div class="form-group col-md-6 mb-3">
                 <label>Hotel Location</label>
-                <input type="text" name="age" class="form-control" id="Location" placeholder="Enter Age">
+                <input type="text" name="location" class="form-control" id="location" placeholder="Enter Hotel Location">
             </div>
 
             <div class="form-group col-md-6 mb-3">
                 <label>Hotel Location with Coordinators</label>
-                <input type="text" name="contact" class="form-control" id="locwithCoordinators" placeholder="Enter Contact No">
+                <input type="text" name="locwithCoordinators" class="form-control" id="locwithCoordinators" placeholder="Enter Hotel Location with Coordinators">
             </div>
 
             <div class="form-group col-md-6 mb-3">
                 <label>Hotel Email</label>
-                <input type="text" name="contact" class="form-control" id="email" placeholder="Enter Contact No">
+                <input type="text" name="email" class="form-control" id="email" placeholder="Enter Hotel Email">
             </div>
 
             <div class="form-group col-md-6 mb-3">
                 <label>Hotel Contact</label>
-                <input type="text" name="experience" class="form-control" id="contact" placeholder="Enter Guide Experience">
+                <input type="text" name="contact" class="form-control" id="contact" placeholder="Enter Contact No">
             </div>
 
             <div class="form-group col-md-6 mb-3">
                 <label>is Pets Allowed</label>
-                <select id="gender-select">
-                    <option value="female">Yes</option>
-                    <option value="male">No</option>
+                <select id="pet-select">
+                    <option value="Yes">Yes</option>
+                    <option value="No">No</option>
                 </select>
             </div>
 
             <div class="form-group col-md-6 mb-3">
                 <label>Full Board Double Hotel Fee</label>
-                <input type="text" name="experience" class="form-control" id="tt" placeholder="Enter Guide Experience">
+                <input type="text" name="fulldouble" class="form-control" id="fulldouble" placeholder="Enter Full Board Double Hotel Feee">
             </div>
 
             <div class="form-group col-md-6 mb-3">
                 <label>Half Board Double Hotel Fee</label>
-                <input type="text" name="experience" class="form-control" id="gg" placeholder="Enter Guide Experience">
+                <input type="text" name="halfdouble" class="form-control" id="halfdouble" placeholder="Enter Half Board Double Hotel Fee">
             </div>
 
             <div class="form-group col-md-6 mb-3">
                 <label>Full Board Triple Hotel Fee</label>
-                <input type="text" name="experience" class="form-control" id="hh" placeholder="Enter Guide Experience">
+                <input type="text" name="fulltriple" class="form-control" id="fulltriple" placeholder="Enter Full Board Triple Hotel Fee">
             </div>
 
             <div class="form-group col-md-6 mb-3">
                 <label>Half Board Triple Hotel Fee</label>
-                <input type="text" name="experience" class="form-control" id="experddience" placeholder="Enter Guide Experience">
+                <input type="text" name="halftriple" class="form-control" id="halftriple" placeholder="Enter Half Board Triple Hotel Feee">
             </div>
 
             <div class="form-group col-md-6 mb-3">
                 <label>Cancellation Criteria</label>
-                <input type="text" name="experience" class="form-control" id="experience" placeholder="Enter Guide Experience">
+                <input type="text" name="cancellation" class="form-control" id="cancellation" placeholder="Enter Cancellation Criteria Details">
             </div>
 
             <div class="form-group col-md-6 mb-3">
                 <label>Package Type</label>
                 <select id="package-select">
-                    <option value="SuperLuxury">Super Luxury</option>
-                    <option value="Luxury">Luxury</option>
-                    <option value="Mid-Range">Mid-Range</option>
                     <option value="Regular">Regular</option>
+                    <option value="Mid-level">Mid-level</option>
+                    <option value="Luxury">Luxury</option>
+                    <option value="Super Luxury">Super Luxury</option>
                 </select>
             </div>
 
 
             <div class="col-lg-12 mt-5">
-                <button class="btn btn-light" id="Submit" onclick="AddData()">Add Data</button>
-                <button class="btn btn-light" id="Update" onclick="AddData()">Update</button>
+                <button class="btn btn-light" id="Submit" >Add Data</button>
+                <button class="btn btn-light" id="Update" >Update</button>
+                <button class="btn btn-light" id="clearButton" >Clear</button>
+                <button class="btn btn-light" id="deleteGuide" >Delete</button>
             </div>
 
         </div>
@@ -150,14 +154,9 @@
                 <th>HotelName</th>
                 <th>HotelCategory</th>
                 <th>HotelLocation</th>
-<!--                <th>HotelLocationWithCoordinators</th>-->
                 <th>HotelEmail</th>
                 <th>HotelContact</th>
                 <th>isPetsAllowed</th>
-<!--                <th>FullBoardDoubleHotelFee</th>-->
-<!--                <th>HalfBoardDoubleHotelFee</th>-->
-<!--                <th>FullBoardTripleHotelFee</th>-->
-<!--                <th>HalfBoardTripleHotelFee</th>-->
                 <th>CancellationCriteria</th>
                 <th>Actions</th>
             </tr>
@@ -167,5 +166,6 @@
     </div>
 </div>
 
+<script src="hotel.js"></script>
 </body>
 </html>
