--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
     <link rel="shortcut icon" href="assests/images/lala2.jpg" type="image">
     <title>Next Travel Pvt.Ltd</title>
 </head>
@@ -48,12 +51,12 @@
     <form action="" class="login-form" >
         <div class="inputBox">
             <span>username</span>
-            <input type="text" placeholder="enter your name">
+            <input type="text" id="username" placeholder="enter your name">
         </div>
 
         <div class="inputBox">
             <span>password</span>
-            <input type="password" placeholder="enter your password">
+            <input type="password" id="password" placeholder="enter your password">
         </div>
 
         <div class="remember">
@@ -61,7 +64,7 @@
             <label for="login-remember">remember me</label>
         </div>
 
-        <input type="submit" class="btn" value="login">
+        <input type="submit" class="btn" value="login" id="loginn">
 
         <label class="lala">don't have an account</label><a href="adminPaneldashboard/registerForm.html">Register Now</a>
     </form>
@@ -115,7 +118,9 @@
             <div class="content">
                 <div class="price"> 150,000 <span>200,000</span></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores autem earum est, id necessitatibus quisquam repellat. Blanditiis !</p>
-                <a href="#" class="btn"> book now</a>
+                <button id="LuxuryBtn" class="btn"> book now
+                    <!--                   <a href="#" ></a>-->
+                </button>
             </div>
         </div>
 
@@ -127,7 +132,9 @@
             <div class="content">
                 <div class="price"> 150,000 <span>200,000</span></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores autem earum est, id necessitatibus quisquam repellat. Blanditiis !</p>
-                <a href="#" class="btn"> book now</a>
+                <button id="MidLevelBtn" class="btn"> book now
+                    <!--                   <a href="#" ></a>-->
+                </button>
             </div>
         </div>
 
@@ -139,7 +146,9 @@
             <div class="content">
                 <div class="price"> 150,000 <span>200,000</span></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores autem earum est, id necessitatibus quisquam repellat. Blanditiis !</p>
-                <a href="#" class="btn"> book now</a>
+                <button id="RegularBtn" class="btn"> book now
+                    <!--                   <a href="#" ></a>-->
+                </button>
             </div>
         </div>
 
