--- a/Vehicle/VehicleManage.html
+++ b/Vehicle/VehicleManage.html
@@ -81,6 +81,16 @@
             </div>
 
             <div class="form-group col-md-6 mb-3">
+                <label>Price for One day</label>
+                <input type="text" name="feeForDay" class="form-control" id="feeForDay" >
+            </div>
+
+            <div class="form-group col-md-6 mb-3">
+                <label>Price for 1km</label>
+                <input type="text" name="feeForOnekm" class="form-control" id="feeForOnekm" >
+            </div>
+
+            <div class="form-group col-md-6 mb-3">
                 <label for="vehicleImageLocation" class="form-label">Vehicle Image</label>
                 <input type="file" class="form-control" id="vehicleImageLocation" placeholder="">
             </div>
