--- a/booking.html
+++ b/booking.html
@@ -58,18 +58,23 @@
             <div class="form-group col-md-6 mb-3">
                 <label>Package Category</label>
                 <select id="package-select">
+<!--                    <option value="" selected disabled>Categories</option>-->
                     <option value="Regular">Regular</option>
                     <option value="Mid-level">Mid-level</option>
                     <option value="Luxury">Luxury</option>
                     <option value="Super Luxury">Super Luxury</option>
                 </select>
+
+
+
                 <input type="text" name="package" id="package" placeholder="Package Id" disabled>
 
             </div>
 
             <div class="form-group col-md-6 mb-3">
                 <label>Travel Areas</label>
-                <select id="area-select">
+                <select id="area-select" >
+<!--                    <option value="" selected disabled>Areas</option>-->
                     <option value="Kandy and Upcountry">Kandy and Upcountry</option>
                     <option value="Eastern Coast">Eastern Coast</option>
                     <option value="Capital Colombo">Capital Colombo</option>
@@ -118,6 +123,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <label>Select Guide</label>
                 <select id="guide-select">
+<!--                    <option value="" selected disabled>guide names</option>-->
 <!--                    <option value="JSelect your guide" selected>"Select your guide"</option>-->
                 </select>
                 &nbsp;&nbsp;<label style="font-size: 20px">Rs.</label><input type="text" name="guideCharge" id="guideCharge" placeholder="Guide Charge" disabled>
@@ -128,6 +134,7 @@
             <div class="form-group col-md-6 mb-3">
                 <label>Select Vehicle</label>
                 <select id="vehicle-select">
+<!--                    <option value="" selected disabled>vehicles</option>-->
 <!--                    <option value=""></option>-->
                 </select>
                 &nbsp;&nbsp;<label style="font-size: 20px">Rs.</label><input type="text" name="vehicleCharge" id="vehicleCharge" placeholder="Vehicle Charge" disabled>
@@ -136,10 +143,11 @@
             <div class="form-group col-md-6 mb-4">
                 <label>Select Hotel</label>
                 <select id="hotel-select">
-                    <option value=""></option>
+<!--                    <option value="" selected disabled>hotels</option>-->
                 </select>
                 &nbsp;&nbsp;&nbsp;<label>Room Type : </label>
                 <select id="room-select">
+<!--                    <option value="" selected disabled>rooms</option>-->
                     <option value="Full Board A/C Luxury Room – Double">Full Board A/C Luxury Room – Double</option>
                     <option value="Half Board A/C Luxury Room - Double">Half Board A/C Luxury Room - Double</option>
                     <option value="Full Board A/C Luxury Room – Triple">Full Board A/C Luxury Room – Triple</option>
