--- a/adminPaneldashboard/adminPanelDashboard.html
+++ b/adminPaneldashboard/adminPanelDashboard.html
@@ -90,14 +90,16 @@
 
 <div class="containerr">
     <h1>Welcome Back Admins!</h1>
-    <div class="loginArae">
+    <form class="loginArae" id="form">
         <img src="../assests/images/lala2.jpg" width="300px" height="300px">
         <div class="loginformm">
             <div class="form-group col-md-6 mb-3">
                 <input type="text" name="username" class="form-control" id="username" placeholder="UserName">
+                <span style="font-size: 10px; color: red" id="name_error"></span>
             </div>
             <div class="form-group col-md-6 mb-3">
                 <input type="password" name="passwords" class="form-control" id="password" placeholder="Password">
+                <span style="font-size: 10px; color: red" id="password_error"></span>
             </div>
 
             <select id="admin-select">
@@ -110,9 +112,9 @@
                 <option value="userAdmin">UserAdmin</option>
             </select>
             <br><br>
-            <button type="button" class="btn btn-secondary" id="submit">Login</button>
+            <button type="submit" class="btn btn-secondary" id="submit">Login</button>
         </div>
-    </div>
+    </form>
 </div>
 <script src="adminPanel.js"></script>
 
