--- a/payment.html
+++ b/payment.html
@@ -3,10 +3,151 @@
 <head>
     <meta charset="UTF-8">
 
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" class="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <link rel="stylesheet" href="paymentt.css">
     <title>Payment Form</title>
 </head>
 <body>
+
+<div class="container">
+
+    <div class="card-container">
+        <div class="front">
+            <div class="image">
+                <img src="assests/images/chip.png" alt="">
+                <img src="assests/images/visa.png" alt="">
+            </div>
+            <div class="card-number-box">################</div>
+            <div class="flexbox">
+                <div class="box">
+                    <span>card holder</span>
+                    <div class="card-holder-name">full name</div>
+                </div>
+                <div class="box">
+                    <span>expires</span>
+                    <div class="expiration">
+                        <span class="exp-month">mm</span>
+                        <span class="exp-year">yy</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="back">
+            <div class="stripe"></div>
+            <div class="box">
+                <span>cvv</span>
+                <div class="cvv-box"></div>
+                <img src="assests/images/visa.png" alt="">
+            </div>
+        </div>
+    </div>
+
+
+<!--    action="https://formsubmit.co/lalaaaliliii123456@gmail.com" method="POST"-->
+
+    <form  action="">
+
+        <div class="inputBox">
+            <span>card number</span>
+            <input type="text" maxlength="16" id="cardno" name="cardno" class="card-number-input">
+        </div>
+
+        <div class="inputBox">
+            <span>card holder</span>
+            <input type="text" id="cardholder" name="cardholder" class="card-holder-input">
+        </div>
+
+        <div class="flexbox">
+
+            <div class="inputBox" >
+                <span>Date</span>
+                <input type="date"  id="date" name="date" class="card-holder-input">
+            </div>
+
+            <div class="inputBox" >
+                <span>User Id</span>
+                <input type="text" id="userid" name="userid" class="card-holder-input" disabled>
+            </div>
+
+            <div class="inputBox" >
+                <span>PackDetailId</span>
+                <input type="text" id="packdetailid" name="packdetailid" class="card-holder-input" disabled>
+            </div>
+
+            <div class="inputBox" >
+                <span>Amount</span>
+                <input type="text" id="amount" name="amount" class="card-holder-input" disabled>
+            </div>
+
+        </div>
+
+
+        <div class="flexbox">
+
+            <div class="inputBox">
+                <span>expiration mm</span>
+                <select name="montSelect" id="month" class="month-input">
+                    <option value="month" selected disabled>month</option>
+                    <option value="01">01</option>
+                    <option value="02">02</option>
+                    <option value="03">03</option>
+                    <option value="04">04</option>
+                    <option value="05">05</option>
+                    <option value="06">06</option>
+                    <option value="07">07</option>
+                    <option value="08">08</option>
+                    <option value="09">09</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                </select>
+            </div>
+
+            <div class="inputBox">
+                <span>expiration yy</span>
+                <select name="yearSelect"  id="year" class="year-input">
+                    <option value="year" selected disabled>year</option>
+                    <option value="2021">2021</option>
+                    <option value="2022">2022</option>
+                    <option value="2023">2023</option>
+                    <option value="2024">2024</option>
+                    <option value="2025">2025</option>
+                    <option value="2026">2026</option>
+                    <option value="2027">2027</option>
+                    <option value="2028">2028</option>
+                    <option value="2029">2029</option>
+                    <option value="2030">2030</option>
+                </select>
+            </div>
+
+            <div class="inputBox">
+                <span>cVV</span>
+                <input type="text" id="cvv" name="cvv" maxlength="4" class="cvv-input">
+            </div>
+
+        </div>
+
+        <input type="button" value="pay" id="Submit" class="submit-btn">
+
+
+
+    </form>
+
+</div>
+
+<script src="payment.js"></script>
 
 </body>
 </html>
