--- a/User/UserManage.html
+++ b/User/UserManage.html
@@ -83,7 +83,7 @@
 
             <div class="form-group col-md-6 mb-3">
                 <label>User DOB</label>
-                <input type="text" name="dob" class="form-control" id="dob" placeholder="Enter DOB">
+                <input type="date" name="dob" class="form-control" id="dob" placeholder="Enter DOB">
             </div>
 
             <div class="form-group col-md-6 mb-3">
