--- a/booking.html
+++ b/booking.html
@@ -47,7 +47,7 @@
 
     <div class="dataForm">
 
-        <div class="row2">
+        <form class="row2" id="form">
             <span class="icon"><i class="fa fa-bookmark" aria-hidden="true"></i></i></span>
             <span class="title">Booking&nbsp;&nbsp;&nbsp;</span>
             <input type="text" name="PackageDetailId" id="PackageDetailId" placeholder="Booking Id" disabled>
@@ -68,6 +68,7 @@
 
 
                 <input type="text" name="package" id="package" placeholder="Package Id" disabled>
+                <span style="font-size: 10px; color: red" id="package_error"></span>
 
             </div>
 
@@ -89,16 +90,19 @@
             <div class="form-group col-md-4 mb-3">
                 <label>Travel Duration </label>
                 <input type="text" name="duration" class="form-control" id="duration" placeholder="Enter Your Travel Duration">
+                <span style="font-size: 10px; color: red" id="duration_error"></span>
             </div>
 
             <div class="form-group col-md-2 mb-3">
                 <label>No of Adults</label>
                 <input type="text" name="adults" class="form-control" id="adults" placeholder="Enter Adults Count">
+                <span style="font-size: 10px; color: red" id="adults_error"></span>
             </div>
 
             <div class="form-group col-md-2 mb-3">
                 <label>No of Children</label>
                 <input type="text" name="kids" class="form-control" id="kids" placeholder="Enter Kids Count">
+                <span style="font-size: 10px; color: red" id="kids_error"></span>
             </div>
 
             <div class="form-group col-md-2 mb-3">
@@ -126,7 +130,9 @@
 <!--                    <option value="" selected disabled>guide names</option>-->
 <!--                    <option value="JSelect your guide" selected>"Select your guide"</option>-->
                 </select>
-                &nbsp;&nbsp;<label style="font-size: 20px">Rs.</label><input type="text" name="guideCharge" id="guideCharge" placeholder="Guide Charge" disabled>
+                &nbsp;&nbsp;<label style="font-size: 20px">Rs.</label>
+
+                <input type="text" name="guideCharge" id="guideCharge" placeholder="Guide Charge" disabled>
 
             </div>
 
@@ -137,7 +143,9 @@
 <!--                    <option value="" selected disabled>vehicles</option>-->
 <!--                    <option value=""></option>-->
                 </select>
-                &nbsp;&nbsp;<label style="font-size: 20px">Rs.</label><input type="text" name="vehicleCharge" id="vehicleCharge" placeholder="Vehicle Charge" disabled>
+                &nbsp;&nbsp;<label style="font-size: 20px">Rs.</label>
+                <input type="text" name="vehicleCharge" id="vehicleCharge" placeholder="Vehicle Charge" disabled>
+                <span style="font-size: 10px; color: red" id="vehicle_error"></span>
             </div>
 
             <div class="form-group col-md-6 mb-4">
@@ -153,7 +161,9 @@
                     <option value="Full Board A/C Luxury Room – Triple">Full Board A/C Luxury Room – Triple</option>
                     <option value="Half Board A/C Luxury Room - Triple">Half Board A/C Luxury Room - Triple</option>
                 </select><br>
-                <label style="font-size: 20px">Rs.</label><input type="text" name="hotelCharge" id="hotelCharge" placeholder="Hotel Charge" disabled>
+                <label style="font-size: 20px">Rs.</label>
+                <input type="text" name="hotelCharge" id="hotelCharge" placeholder="Hotel Charge" disabled>
+                <span style="font-size: 10px; color: red" id="hotel_error"></span>
             </div>
 
 
@@ -175,7 +185,7 @@
             </div>
 
             <div class="col-lg-12 mt-5">
-                <button class="btn btn-light" id="Submit" >Add Boking</button>
+                <button type="submit" class="btn btn-light" id="Submit" >Add Boking</button>
                 <button class="btn btn-light" id="clearButton" >Clear</button>
                 <button class="btn btn-light" id="payment" > Do Payment</button>
             </div>
@@ -187,7 +197,7 @@
             <br>
 
 
-        </div>
+        </form>
 
         <div class="row3">
 
