--- a/payment.html
+++ b/payment.html
@@ -14,7 +14,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+    <script type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("ePmkJcWe-3DUr49Ft");
+        })();
+    </script>
     <link rel="stylesheet" href="paymentt.css">
     <title>Payment Form</title>
 </head>
@@ -128,19 +135,19 @@
 
             <div class="inputBox" >
                 <span>User Id</span>
-                <input type="text" id="userid" name="userid" class="card-holder-input" disabled>
+                <input type="text" id="userid" name="userid" class="card-holder-input" >
                 <span style="font-size: 10px; color: red" id="userid_error"></span>
             </div>
 
             <div class="inputBox" >
                 <span>PackDetailId</span>
-                <input type="text" id="packdetailid" name="packdetailid" class="card-holder-input" disabled>
+                <input type="text" id="packdetailid" name="packdetailid" class="card-holder-input" >
                 <span style="font-size: 10px; color: red" id="packdetailid_error"></span>
             </div>
 
             <div class="inputBox" >
                 <span>Amount</span>
-                <input type="text" id="amount" name="amount" class="card-holder-input" disabled>
+                <input type="text" id="amount" name="amount" class="card-holder-input" >
                 <span style="font-size: 10px; color: red" id="amount_error"></span>
             </div>
 
